# condense

./: .env  Cargo.toml  README.md
migrations/2024-02-11-112822_users/: down.sql  up.sql
migrations/2024-02-18-050928_create_ckg_session/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/auth/: authed_user.rs  mod.rs
src/ckg/: README.md  mod.rs
src/models/: cdkg_session.rs  mod.rs  roles.rs  user_roles.rs  users.rs
src/roles/: mod.rs  types.rs
src/services/: mod.rs
src/services/ckg/: mod.rs  types.rs
src/services/roles/: mod.rs
src/services/signers/: README.md  mod.rs
src/services/users/: README.md  mod.rs
src/sign/: README.md  mod.rs
src/signers/: mod.rs
src/state/: app_state.rs
src/test/: mod.rs
src/users/: mod.rs  types.rs
